--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020702
+ - (djm) Use PAM_MSG_MEMBER for PAM_TEXT_INFO messages, use xmalloc & 
+   friends consistently. Spotted by Solar Designer <solar@openwall.com>
+
 20020629
  - (bal) fix to auth2-pam.c to swap fatal() arguments,  A bit of style
    clean up while I'm near it.
