--- a/ChangeLog
+++ b/ChangeLog
@@ -56,7 +56,8 @@
      /etc/ssh/ssh_config and exit if HostbasedAuthentication is disabled 
      globally. based on discussions with deraadt, itojun and sommerfeld; 
      ok itojun@
-
+ - (bal) Failed password attempts don't increment counter on AIX. Bug #145
+  
 20020702
  - (djm) Use PAM_MSG_MEMBER for PAM_TEXT_INFO messages, use xmalloc & 
    friends consistently. Spotted by Solar Designer <solar@openwall.com>
