--- a/ChangeLog
+++ b/ChangeLog
@@ -57,6 +57,7 @@
      globally. based on discussions with deraadt, itojun and sommerfeld; 
      ok itojun@
  - (bal) Failed password attempts don't increment counter on AIX. Bug #145
+ - (bal) Missed Makefile.in change.  keysign needs readconf.o
   
 20020702
  - (djm) Use PAM_MSG_MEMBER for PAM_TEXT_INFO messages, use xmalloc & 
