--- a/ChangeLog
+++ b/ChangeLog
@@ -58,6 +58,7 @@
      ok itojun@
  - (bal) Failed password attempts don't increment counter on AIX. Bug #145
  - (bal) Missed Makefile.in change.  keysign needs readconf.o
+ - (bal) Clean up aix_usrinfo().  Ignore TTY= period I guess.
   
 20020702
  - (djm) Use PAM_MSG_MEMBER for PAM_TEXT_INFO messages, use xmalloc & 
