--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020704
+ - (bal) Limit data to TTY for AIX only (Newer versions can't handle the
+   faster data rate)  Bug #124
+ 
 20020703
  - (bal) Updated contrib/cygwin/  patch by vinschen@redhat.com 
  - (bal) minor correction to utimes() replacement.  Patch by
