--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20020704
  - (bal) Limit data to TTY for AIX only (Newer versions can't handle the
    faster data rate)  Bug #124
+ - (bal) glob.c defines TILDE and AIX also defines it.  #undef it first.
+   bug #265
  
 20020703
  - (bal) Updated contrib/cygwin/  patch by vinschen@redhat.com 
