--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    faster data rate)  Bug #124
  - (bal) glob.c defines TILDE and AIX also defines it.  #undef it first.
    bug #265
+ - (bal) One too many nulls in ports-aix.c
  
 20020703
  - (bal) Updated contrib/cygwin/  patch by vinschen@redhat.com 
