--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020705
+ - (tim) [configure.ac] AIX 4.2.1 has authenticate() in libs.
+   Reported by Darren Tucker <dtucker@zip.com.au>
+
 20020704
  - (bal) Limit data to TTY for AIX only (Newer versions can't handle the
    faster data rate)  Bug #124
