--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20020705
  - (tim) [configure.ac] AIX 4.2.1 has authenticate() in libs.
    Reported by Darren Tucker <dtucker@zip.com.au>
+ - (tim) [contrib/cygwin/ssh-host-config] double slash corrction
+   from vinschen@redhat.com
 
 20020704
  - (bal) Limit data to TTY for AIX only (Newer versions can't handle the
