[contrib/cygwin/ssh-host-config] sshd account creation fixes patch from vinschen@redhat.com

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
  - (tim) [Makefile.in] use umask instead of chmod on $(PRIVSEP_PATH)
  - (tim) [acconfig.h configure.ac sshd.c]
    s/BROKEN_FD_PASSING/DISABLE_FD_PASSING/
+ - (tim) [contrib/cygwin/ssh-host-config] sshd account creation fixes
+   patch from vinschen@redhat.com
 
 20020705
  - (tim) [configure.ac] AIX 4.2.1 has authenticate() in libs.
