- (bal) [realpath.c] Updated with OpenBSD tree.

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
    s/BROKEN_FD_PASSING/DISABLE_FD_PASSING/
  - (tim) [contrib/cygwin/ssh-host-config] sshd account creation fixes
    patch from vinschen@redhat.com
+ - (bal) [realpath.c] Updated with OpenBSD tree.
 
 20020705
  - (tim) [configure.ac] AIX 4.2.1 has authenticate() in libs.
