--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,7 @@
    - stevesk@cvs.openbsd.org 2002/07/06 17:47:58
      [ssh-keyscan.c]
      unused variable
+ - (bal) Minor KNF on ssh-keyscan.c
 
 20020705
  - (tim) [configure.ac] AIX 4.2.1 has authenticate() in libs.
