--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020708
+ - (tim) [openssh/contrib/solaris/buildpkg.sh] add PKG_INSTALL_ROOT to
+   work in a jumpstart environment. patch by kbrint@rufus.net
+
 20020707
  - (tim) [Makefile.in] use umask instead of chmod on $(PRIVSEP_PATH)
  - (tim) [acconfig.h configure.ac sshd.c]
