--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020710
+ - (tim) [contrib/cygwin/ssh-host-config] explicitely sets the permissions
+   on /var/empty to 755 Patch by vinschen@redhat.com
+
 20020709
  - (bal) NO_IPPORT_RESERVED_CONCEPT used instead of CYGWIN so other platforms
    lacking that concept can share it. Patch by vinschen@redhat.com
