--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    openbsd-compat/Makefile.in] support compression on platforms that
    have no/broken MAP_ANON. Moved code to openbsd-compat/xmmap.c
    Based on patch from nalin@redhat.com of code extracted from Owl's package
+ - (tim) [ssh_prng_cmds.in] Bug 323 arp -n flag doesn't exist under Solaris.
+   report by chris@by-design.net
 
 20020712
  - (tim) [Makefile.in] quiet down install-files: and check-user:
