--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
    - markus@cvs.openbsd.org 2002/07/12 15:50:17
      [cipher.c]
      EVP_CIPH_CUSTOM_IV for our own rijndael
+ - (bal) Remove unused tty defined in do_setusercontext() pointed out by
+   dtucker@zip.com.au plus a a more KNF since I am near it.
 
 20020714
  - (tim) [Makefile.in] replace "id sshd" with "sshd -t"
