--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020716
+ - (tim) [contrib/solaris/opensshd.in] Only kill sshd if .pid file found
+
 20020715
  - (bal) OpenBSD CVS Sync
    - itojun@cvs.openbsd.org 2002/07/12 13:29:09
