--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
+20020718
+ - (tim) [defines.h] Bug 313 patch by dirk.meyer@dinoex.sub.org
+ - (tim) [monitor_mm.c] add missing declaration for xmmap(). Reported
+   by ayamura@ayamura.org
+
 20020717
  - (bal) aixbff package updated by dtucker@zip.com.au
  - (tim) [configure.ac] change how we do paths in AC_PATH_PROGS tests
    for autoconf 2.53. Based on a patch by jrj@purdue.edu
- - (tim) [defines.h] Bug 313 patch by dirk.meyer@dinoex.sub.org
 
 20020716
  - (tim) [contrib/solaris/opensshd.in] Only kill sshd if .pid file found
