[configure.ac] Bug 267 rework int64_t test.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
  - (tim) [defines.h] Bug 313 patch by dirk.meyer@dinoex.sub.org
  - (tim) [monitor_mm.c] add missing declaration for xmmap(). Reported
    by ayamura@ayamura.org
+ - (tim) [configure.ac] Bug 267 rework int64_t test.
 
 20020717
  - (bal) aixbff package updated by dtucker@zip.com.au
