--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20020719
  - (tim) [contrib/solaris/buildpkg.sh] create privsep user/group if needed.
    Patch by dtucker@zip.com.au
+ - (tim) [configure.ac]  test for libxnet on HP. Patch by dtucker@zip.com.au
 
 20020718
  - (tim) [defines.h] Bug 313 patch by dirk.meyer@dinoex.sub.org
