--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
    PAM_NEW_AUTHTOK_REQD remains in #if 0 for now.
  - (stevesk) [auth-pam.c] cast to avoid initialization type mismatch
    warning on pam_conv struct conversation function.
+ - (stevesk) [auth-pam.h] license
 
 20020720
  - (stevesk) [ssh-keygen.c] bug #231: always init/seed_rng().
