--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
  - (stevesk) [auth-pam.c] cast to avoid initialization type mismatch
    warning on pam_conv struct conversation function.
  - (stevesk) [auth-pam.h] license
+ - (stevesk) [auth-pam.h] unneeded include
 
 20020720
  - (stevesk) [ssh-keygen.c] bug #231: always init/seed_rng().
