--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
    warning on pam_conv struct conversation function.
  - (stevesk) [auth-pam.h] license
  - (stevesk) [auth-pam.h] unneeded include
+ - (stevesk) [auth-pam.[ch] ssh.h] move SSHD_PAM_SERVICE to auth-pam.h
 
 20020720
  - (stevesk) [ssh-keygen.c] bug #231: always init/seed_rng().
