--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20020722
  - (bal) AIX tty data limiting patch fix by leigh@solinno.co.uk
+ - (stevesk) [xmmap.c] missing prototype for fatal()
 
 20020721
  - (stevesk) [auth-pam.c] merge cosmetic changes from solar's
