- (bal) [configure.ac]  Missing ;; from cray patch.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
  - (stevesk) [xmmap.c] missing prototype for fatal()
  - (bal) [configure.ac defines.h loginrec.c sshd.c sshpty.c] Partial sync
    with Cray (mostly #ifdef renaming).  Patch by wendyp@cray.com.
+ - (bal) [configure.ac]  Missing ;; from cray patch.
 
 20020721
  - (stevesk) [auth-pam.c] merge cosmetic changes from solar's
