--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@
  - (bal) [configure.ac]  Missing ;; from cray patch.
  - (bal) [monitor_mm.c openbsd-compat/xmmap.h] Move xmmap() defines
    into it's own header.
+ - (stevesk) [auth-pam.[ch] session.c] pam_getenvlist() must be
+   freed by the caller; add free_pam_environment() and use it.
 
 20020721
  - (stevesk) [auth-pam.c] merge cosmetic changes from solar's
