- (bal) [bsd-cray.c bsd-cray.h] Part 2 of Cray merger.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020723
+ - (bal) [bsd-cray.c bsd-cray.h] Part 2 of Cray merger. 
+ 
 20020722
  - (bal) AIX tty data limiting patch fix by leigh@solinno.co.uk
  - (stevesk) [xmmap.c] missing prototype for fatal()
