--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020725
+ - (djm) Remove some cruft from INSTALL
+
 20020723
  - (bal) [bsd-cray.c bsd-cray.h] Part 2 of Cray merger. 
  - (bal) sync ID w/ ssh-agent.c
