--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20020728
  - (stevesk) [auth-pam.c] should use PAM_MSG_MEMBER(); from solar
+ - (stevesk) [CREDITS] solar
 
 20020725
  - (djm) Remove some cruft from INSTALL
