--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020730
+ - (bal) [uidswap.c] SCO compile correction by gert@greenie.muc.de
+
 20020728
  - (stevesk) [auth-pam.c] should use PAM_MSG_MEMBER(); from solar
  - (stevesk) [CREDITS] solar
