--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020813
+ - (tim) [configure.ac] Display OpenSSL header/library version.
+   Patch by dtucker@zip.com.au
+
 20020731
  - (bal) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2002/07/24 16:11:18
