--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 20020903
+ - (djm) Patch from itojun@ for Darwin OS: test getaddrinfo, reorder libcrypt
  - (djm) Fix Redhat RPM build dependancy test
  - (djm) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2002/08/12 10:46:35
