--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
  - (djm) Merge openssh-TODO.patch from Redhat (null) beta
  - (djm) Add gnome-ssh-askpass2.c (gtk2) by merge with patch from 
     Nalin Dahyabhai <nalin@redhat.com>
+ - (djm) Add support for building gtk2 password requestor from Redhat beta
 
 20020903
  - (djm) Patch from itojun@ for Darwin OS: test getaddrinfo, reorder libcrypt
