--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020910
+ - (djm) Bug #365: Read /.ssh/environment properly under CygWin. 
+   Patch from Mark Bradshaw <bradshaw@staff.crosswalk.com>
+
 20020905 
  - (djm) OpenBSD CVS Sync
    - stevesk@cvs.openbsd.org 2002/09/04 18:52:42
