--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 20020912
+ - (djm) Added getpeereid() replacement. Properly implemented for systems
+   with SO_PEERCRED support. Faked for systems which lack it.
  - (djm) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2002/09/08 20:24:08
      [hostfile.h]
