--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 20020912
+ - (djm) Made GNOME askpass programs return non-zero if cancel button is 
+   pressed.
  - (djm) Added getpeereid() replacement. Properly implemented for systems
    with SO_PEERCRED support. Faked for systems which lack it.
  - (djm) Sync sys/tree.h with OpenBSD -current. Rename tree.h and 
