--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20020923
+ - (tim) [configure.ac] s/return/exit/ patch by dtucker@zip.com.au
+
 20020922
  - (djm) OpenBSD CVS Sync
    - stevesk@cvs.openbsd.org 2002/09/19 14:53:14
