--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20020925
+ - (bal) Fix issue where successfull login does not clear failure counts
+   in AIX.  Patch by dtucker@zip.com.au ok by djm
+
 20020923
  - (djm) OpenBSD CVS Sync
    - stevesk@cvs.openbsd.org 2002/09/23 20:46:27
