--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20021015
+ - (tim) [contrib/caldera/openssh.spec] make ssh-agent setgid nobody
+
 20021004
  - (bal) Disable post-authentication Privsep for OSF/1.  It conflicts with
    SIA.
