- (bal) More advanced strsep test by Darren Tucker <dtucker@zip.com.au>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20021015
  - (bal) Fix bug id 383 and only call loginrestrict for AIX if not root.
+ - (bal) More advanced strsep test by Darren Tucker <dtucker@zip.com.au>
 
 20021015
  - (tim) [contrib/caldera/openssh.spec] make ssh-agent setgid nobody
