--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 20021021
+ - (djm) Bug #400: Kill ssh-rand-helper children on timeout, patch from 
+   dtucker@zip.com.au
  - (djm) Bug #317: FreeBSD needs libutil.h for openpty() Report from 
    dirk.meyer@dinoex.sub.org
- - (djm) Bug #317: FreeBSD needs libutil.h for openpty()
 
 20021015
  - (bal) Fix bug id 383 and only call loginrestrict for AIX if not root.
