--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,9 @@
      [scp.c]
      check exit status from ssh, and exit(1) if ssh fails; bug#369; 
      binder@arago.de
+ - (bal) Update ssh-host-config and minor rewrite of bsd-cygwin_util.c
+   ntsec now default if cygwin version beginning w/ version 56.  Patch
+   by Corinna Vinschen <vinschen@redhat.com> 
 
 20021021
  - (djm) Bug #400: Kill ssh-rand-helper children on timeout, patch from 
