--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20021113
+ - (tim) [configure.ac] remove unused variables no_libsocket and no_libnsl
+
 20021111
  - (tim) [contrib/solaris/opensshd.in] add umask 022 so sshd.pid is
    not world writable.
