- (djm) PERL-free fixpaths from stuge-openssh-unix-dev@cdy.org

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20021205
+ - (djm) PERL-free fixpaths from stuge-openssh-unix-dev@cdy.org
+
 20021122
  - (tim) [configure.ac] fix STDPATH test for IRIX. First reported by
    advax@triumf.ca. This type of solution tested by <herb@sgi.com>
