--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030103
+ - (djm) Bug #461: ssh-copy-id fails with no arguments. Patch from 
+   cjwatson@debian.org
+
 20030101
   - (stevesk) [session.c sshlogin.c sshlogin.h] complete portable
     parts of pass addrlen with sockaddr * fix.
