--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
    Based on fix from yoshfuji@linux-ipv6.org
  - (djm) Bug #442: Check for and deny access to accounts with locked 
    passwords. Patch from dtucker@zip.com.au
+ - (djm) Bug #26: Use local mkstemp() rather than glibc's silly one. Fixes
+   Can't pass KRB4 TGT passing. Fix from: jan.iven@cern.ch
 
 20030103
  - (djm) Bug #461: ssh-copy-id fails with no arguments. Patch from 
