--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
    passwords. Patch from dtucker@zip.com.au
  - (djm) Bug #26: Use local mkstemp() rather than glibc's silly one. Fixes
    Can't pass KRB4 TGT passing. Fix from: jan.iven@cern.ch
+ - (djm) Fix Bug #442 for PAM case
 
 20030103
  - (djm) Bug #461: ssh-copy-id fails with no arguments. Patch from 
