--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@
    on one by peak@argo.troja.mff.cuni.cz
  - (djm) Bug #111: Run syslog and stderr logging through strnvis to eliminate
    nasties. Report from peak@argo.troja.mff.cuni.cz
+ - (djm) Bug #178: On AIX /etc/nologin wasnt't shown to users. Fix from 
+   Ralf.Wenk@fh-karlsruhe.de and dtucker@zip.com.au
 
 20030103
  - (djm) Bug #461: ssh-copy-id fails with no arguments. Patch from 
