--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20030108
+ - (djm) Sync openbsd-compat/ with OpenBSD -current
+
 20030107
  - (djm) Bug #401: Work around Linux breakage with IPv6 mapped addresses. 
    Based on fix from yoshfuji@linux-ipv6.org
