--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 20030108
  - (djm) Sync openbsd-compat/ with OpenBSD -current
+ - (djm) Avoid redundant xstrdup/xfree in auth2-pam.c. From Solar via markus@
 
 20030107
  - (djm) Bug #401: Work around Linux breakage with IPv6 mapped addresses. 
