--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,8 @@
      [sftp.1]
      add version; from Nils Nordman <nino at nforced dot com> via markus@.
      markus@ ok
+ - (djm) Update README to reflect AIX's status as a well supported platform.
+   From dtucker@zip.com.au
 
 20030107
  - (djm) Bug #401: Work around Linux breakage with IPv6 mapped addresses. 
