--- a/README
+++ b/README
@@ -15,8 +15,8 @@ and Dug Song. It has a homepage at http://www.openssh.com/
 This port consists of the re-introduction of autoconf support, PAM
 support (for Linux and Solaris), EGD[1]/PRNGD[2] support and replacements 
 for OpenBSD library functions that are (regrettably) absent from other 
-unices. This port has been best tested on Linux, Solaris, HP-UX, NetBSD 
-and Irix. Support for AIX, SCO, NeXT and other Unices is underway. 
+unices. This port has been best tested on Linux, Solaris, HP-UX, NetBSD, 
+Irix and AIX. Support for SCO, NeXT and other Unices is underway. 
 This version actively tracks changes in the OpenBSD CVS repository.
 
 The PAM support is now more functional than the popular packages of
