--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,8 @@
      markus@ ok
  - (djm) Update README to reflect AIX's status as a well supported platform.
    From dtucker@zip.com.au
+ - (tim) [Makefile.in configure.ac] replace fixpath with sed script. Patch
+   by Mo DeJong.
 
 20030107
  - (djm) Bug #401: Work around Linux breakage with IPv6 mapped addresses. 
