--- a/TODO
+++ b/TODO
@@ -101,6 +101,7 @@ Clean up configure/makefiles:
   (vinschen@redhat.com)
 
 - Replace the whole u_intXX_t evilness in acconfig.h with something better???
+ - Do it in configure.ac
 
 - Consider splitting the u_intXX_t test for sys/bitype.h  into seperate test
   to allow people to (right/wrongfully) link against Bind directly.
