- (djm) Bug #467: Add a --disable-strip option to turn off stripping of    installed binaries. From mdev@idg.nl

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20030103
  - (djm) Rework openbsd-compat/setproctitle.c a bit: move emulation type
    detection to configure.ac. Prompted by stevesk@
+ - (djm) Bug #467: Add a --disable-strip option to turn off stripping of 
+   installed binaries. From mdev@idg.nl
 
 20030110
  - (djm) Enable new setproctitle emulation for Linux, AIX and HP/UX. More 
