--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
    - djm@cvs.openbsd.org 2003/01/13 11:04:04
      [sftp-int.c]
      make cmds[] array static to avoid conflict with BSDI libc.
+     mindrot bug #466. Fix from mdev@idg.nl; ok markus@
 
 20030113
  - (djm) Rework openbsd-compat/setproctitle.c a bit: move emulation type
