--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
      Add a -t life option to ssh-agent that set the default lifetime.
      The default can still be overriden by using -t in ssh-add.
      OK markus@
+ - (djm) Reorganise PAM & SIA password handling to eliminate some common code
 
 20030120
  - (djm) Fix compilation for NetBSD from dtucker@zip.com.au
