--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
    - markus@cvs.openbsd.org 2003/01/23 14:06:15
      [scp.1 scp.c]
      scp -12; Sam Smith and others; ok provos@, deraadt@
+ - (djm) Add TIMEVAL_TO_TIMESPEC macros
 
 20030123
  - (djm) OpenBSD CVS Sync
