--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+200301027
+ - (bal) Bugzilla 477 patch by wendyp@cray.com.  Define TIOCGPGRP for
+   cray.  Also removed test for tcgetpgrp in configure.ac since it
+   is no longer used.
+
 20030124
  - (djm) OpenBSD CVS Sync
    - jmc@cvs.openbsd.org 2003/01/23 08:58:47
