- (djm) Search libposix4 and librt for nanosleep. From dtucker@zip.com.au    and openssh-unix-dev@thewrittenword.com

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+200301028
+ - (djm) Search libposix4 and librt for nanosleep. From dtucker@zip.com.au 
+   and openssh-unix-dev@thewrittenword.com 
+
 200301027
  - (bal) Bugzilla 477 patch by wendyp@cray.com.  Define TIOCGPGRP for
    cray.  Also removed test for tcgetpgrp in configure.ac since it
