--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030206
+ - (djm) Teach fake-getaddrinfo to use getservbyname() when provided a 
+   string service name. Suggested by markus@, review by itojun@
+
 20030131
  - (bal) AIX 4.2.1 lacks nanosleep().  Patch to use nsleep() provided by
    dtucker@zip.com.au
