--- a/ChangeLog
+++ b/ChangeLog
@@ -79,6 +79,8 @@
      ...sizeof(&adat.session) is not good here.
      henning@, deraadt@, millert@
  - (djm) Add new object files to Makefile and reorder
+ - (djm) Bug #501: gai_strerror should return char*; 
+   fix from dtucker@zip.com.au
 
 20030211
  - (djm) Cygwin needs libcrypt too. Patch from vinschen@redhat.com
