--- a/ChangeLog
+++ b/ChangeLog
@@ -81,6 +81,7 @@
  - (djm) Add new object files to Makefile and reorder
  - (djm) Bug #501: gai_strerror should return char*; 
    fix from dtucker@zip.com.au
+ - (djm) Most of Bug #499: Cygwin compile fixes for new progressmeter
 
 20030211
  - (djm) Cygwin needs libcrypt too. Patch from vinschen@redhat.com
