--- a/ChangeLog
+++ b/ChangeLog
@@ -82,6 +82,7 @@
  - (djm) Bug #501: gai_strerror should return char*; 
    fix from dtucker@zip.com.au
  - (djm) Most of Bug #499: Cygwin compile fixes for new progressmeter
+ - (djm) Rest of Bug #499: Import a basename() function from OpenBSD libc
 
 20030211
  - (djm) Cygwin needs libcrypt too. Patch from vinschen@redhat.com
