--- a/ChangeLog
+++ b/ChangeLog
@@ -81,8 +81,11 @@
  - (djm) Add new object files to Makefile and reorder
  - (djm) Bug #501: gai_strerror should return char*; 
    fix from dtucker@zip.com.au
- - (djm) Most of Bug #499: Cygwin compile fixes for new progressmeter
+ - (djm) Most of Bug #499: Cygwin compile fixes for new progressmeter;
+   From vinschen@redhat.com
  - (djm) Rest of Bug #499: Import a basename() function from OpenBSD libc
+ - (djm) Bug #494: Allow multiple accounts on Windows 9x/Me; 
+   From vinschen@redhat.com
 
 20030211
  - (djm) Cygwin needs libcrypt too. Patch from vinschen@redhat.com
