--- a/ChangeLog
+++ b/ChangeLog
@@ -86,6 +86,7 @@
  - (djm) Rest of Bug #499: Import a basename() function from OpenBSD libc
  - (djm) Bug #494: Allow multiple accounts on Windows 9x/Me; 
    From vinschen@redhat.com
+ - (djm) Bug #456: Support for NEC SX6 with Unicos; from wendyp@cray.com
 
 20030211
  - (djm) Cygwin needs libcrypt too. Patch from vinschen@redhat.com
