--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030317
+ - (djm) Fix return value checks for RAND_bytes. Report from 
+   Steve G <linux_4ever@yahoo.com>
+
 20030315
  - (djm) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2003/03/13 11:42:19
