--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030318
+ - (tim) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
+   add nanosleep(). testing/corrections by Darren Tucker <dtucker@zip.com.au>
+
 20030317
  - (djm) Fix return value checks for RAND_bytes. Report from 
    Steve G <linux_4ever@yahoo.com>
