--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
    - markus@cvs.openbsd.org 2003/03/17 11:43:47
      [version.h]
      enter 3.6
+ - (bal) The days of lack of int64_t support are over.  Sorry kids.
 
 20030318
  - (tim) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
