--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
      [version.h]
      enter 3.6
  - (bal) The days of lack of int64_t support are over.  Sorry kids.
+ - (bal) scp.c 'limit' conflicts with Cray.  Rename to 'limitbw'
 
 20030318
  - (tim) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
