--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,9 @@
  - (bal) scp.c 'limit' conflicts with Cray.  Rename to 'limitbw'
  - (bal) Collection of Cray patches (bsd-cray.h fix for CRAYT3E and improved
    guessing rules)
+ - (bal) Disable Privsep for Tru64 after pre-authentication due to issues
+   with SIA.  Also, clean up of tru64 support patch by Chris Adams
+   <cmadams@hiwaay.net>
 
 20030318
  - (tim) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
