[contrib/caldera/openssh.spec] workaround RPM quirk. Fix %files section

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
  - (bal) Disable Privsep for Tru64 after pre-authentication due to issues
    with SIA.  Also, clean up of tru64 support patch by Chris Adams
    <cmadams@hiwaay.net>
+ - (tim) [contrib/caldera/openssh.spec] workaround RPM quirk. Fix %files
 
 20030318
  - (tim) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
