- (djm) Fix getpeerid support for 64 bit BE systems. From     Arnd Bergmann <arndb@de.ibm.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030325
+ - (djm) Fix getpeerid support for 64 bit BE systems. From 
+    Arnd Bergmann <arndb@de.ibm.com>
+
 20030324
  - (djm) OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2003/03/23 19:02:00
