--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,7 @@
    - markus@cvs.openbsd.org 2003/04/01 10:56:46
      [version.h]
      3.6.1
+ - (djm) Crank spec file versions
 
 20030326
  - (djm) OpenBSD CVS Sync
