--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,7 @@
      [servconf.c]
      Don't include <krb.h> when compiling with Kerberos 5 support
    - (djm) Fix up missing include for packet.c
+   - (djm) Fix missed log => logit occurance (reference by function pointer)
 
 20030402
  - (bal) if IP_TOS is not found or broken don't try to compile in
