--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 20030427
  - (bal) Bug #541: return; was dropped by mistake.  Reported by 
    furrier@iglou.com
+ - (bal) Since we don't support platforms lacking u_int_64.  We may
+   as well clean out some of those evil #ifdefs
 
 20030409
  - (djm) Bug #539: Specify creation mode with O_CREAT for lastlog. Report 
