- (bal) auth1.c minor resync while looking at the code.

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
    furrier@iglou.com
  - (bal) Since we don't support platforms lacking u_int_64.  We may
    as well clean out some of those evil #ifdefs
+ - (bal) auth1.c minor resync while looking at the code.
 
 20030409
  - (djm) Bug #539: Specify creation mode with O_CREAT for lastlog. Report 
