--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
  - (bal) Since we don't support platforms lacking u_int_64.  We may
    as well clean out some of those evil #ifdefs
  - (bal) auth1.c minor resync while looking at the code.
+ - (bal) auth2.c same changed as above.
 
 20030409
  - (djm) Bug #539: Specify creation mode with O_CREAT for lastlog. Report 
