--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 20030504
- - (dtucker) Move #include of bsd-cygwin_util.h to openbsd-compat.h.  Patch from
-   vinschen@redhat.com.
+ - (dtucker) Bug #497: Move #include of bsd-cygwin_util.h to openbsd-compat.h.
+   Patch from vinschen@redhat.com.
 
 20030503
  - (dtucker) Add missing "void" to record_failed_login in bsd-cray.c.  Noted
