--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030510
+ - (dtucker) Bug #318: Create ssh_prng_cmds.out during "make" rather than
+   "make install".  Patch by roth@feep.net.
+
 20030504
  - (dtucker) Bug #497: Move #include of bsd-cygwin_util.h to openbsd-compat.h.
    Patch from vinschen@redhat.com.
