--- a/ChangeLog
+++ b/ChangeLog
@@ -67,6 +67,7 @@
      [auth2.c monitor.c sshconnect2.c auth2-krb5.c]
      implement kerberos over ssh2 ("kerberos-2@ssh.com"); tested with jakob@
      server interops with commercial client; ok jakob@ djm@
+ - (djm) Make portable build with MIT krb5 (some issues remain)
 
 20030512
  - (djm) Redhat spec: Don't install profile.d scripts when not 
