- (djm) Add new UsePAM configuration directive to allow runtime control    over usage of PAM. This allows non-root use of sshd when built with    --with-pam

--- a/ChangeLog
+++ b/ChangeLog
@@ -68,6 +68,9 @@
      implement kerberos over ssh2 ("kerberos-2@ssh.com"); tested with jakob@
      server interops with commercial client; ok jakob@ djm@
  - (djm) Make portable build with MIT krb5 (some issues remain)
+ - (djm) Add new UsePAM configuration directive to allow runtime control
+   over usage of PAM. This allows non-root use of sshd when built with
+   --with-pam
 
 20030512
  - (djm) Redhat spec: Don't install profile.d scripts when not 
