--- a/ChangeLog
+++ b/ChangeLog
@@ -71,6 +71,7 @@
  - (djm) Add new UsePAM configuration directive to allow runtime control
    over usage of PAM. This allows non-root use of sshd when built with
    --with-pam
+ - (djm) Die screaming if start_pam() is called when UsePAM=no
 
 20030512
  - (djm) Redhat spec: Don't install profile.d scripts when not 
