--- a/ChangeLog
+++ b/ChangeLog
@@ -72,6 +72,7 @@
    over usage of PAM. This allows non-root use of sshd when built with
    --with-pam
  - (djm) Die screaming if start_pam() is called when UsePAM=no
+ - (djm) Avoid KrbV leak for MIT Kerberos
 
 20030512
  - (djm) Redhat spec: Don't install profile.d scripts when not 
