--- a/ChangeLog
+++ b/ChangeLog
@@ -84,6 +84,7 @@
  - (djm) Die screaming if start_pam() is called when UsePAM=no
  - (djm) Avoid KrbV leak for MIT Kerberos
  - (dtucker) Set ai_socktype and ai_protocol in fake-getaddrinfo.c. ok djm@
+ - (djm) Bug #258: sscanf("[0-9]") -> sscanf("[0123456789]") for portability
 
 20030512
  - (djm) Redhat spec: Don't install profile.d scripts when not 
