--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
    - markus@cvs.openbsd.org 2003/05/14 22:24:42
      [clientloop.c session.c ssh.1]
      allow to send a BREAK to the remote system; ok various
+ - (djm) Configure glue for DNS support (code doesn't work in portable yet)
 
 20030514
  - (djm) Bug #117: Don't lie to PAM about username
