--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,7 @@
  - (djm) Always parse UsePAM
  - (djm) Configure glue for DNS support (code doesn't work in portable yet)
  - (djm) Import getrrsetbyname() function from OpenBSD libc (for DNS support)
+ - (djm) Tidy Makefile clean targets
 
 20030514
  - (djm) Bug #117: Don't lie to PAM about username
