--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,7 @@
  - (djm) Configure glue for DNS support (code doesn't work in portable yet)
  - (djm) Import getrrsetbyname() function from OpenBSD libc (for DNS support)
  - (djm) Tidy Makefile clean targets
+ - (djm) Adapt README.dns for portable
 
 20030514
  - (djm) Bug #117: Don't lie to PAM about username
