--- a/ChangeLog
+++ b/ChangeLog
@@ -48,7 +48,7 @@
  - (djm) Adapt README.dns for portable
  - (djm) Avoid uuencode.c warnings
  - (djm) Enable UsePAM when built --with-pam
-
+ - (djm) Only build getrrsetbyname replacement when using --with-dns
 20030514
  - (djm) Bug #117: Don't lie to PAM about username
  - (djm) RCSID sync w/ OpenBSD
