--- a/ChangeLog
+++ b/ChangeLog
@@ -49,6 +49,9 @@
  - (djm) Avoid uuencode.c warnings
  - (djm) Enable UsePAM when built --with-pam
  - (djm) Only build getrrsetbyname replacement when using --with-dns
+ - (djm) Bug #529: sshd doesn't work correctly after SIGHUP (copy argv 
+         correctly)
+
 20030514
  - (djm) Bug #117: Don't lie to PAM about username
  - (djm) RCSID sync w/ OpenBSD
