--- a/ChangeLog
+++ b/ChangeLog
@@ -52,6 +52,7 @@
  - (djm) Bug #529: sshd doesn't work correctly after SIGHUP (copy argv 
          correctly)
  - (djm) Bug #444: Wrong paths after reconfigure
+ - (dtucker) HP-UX needs to include <sys/strtio.h> for TIOCSBRK
 
 20030514
  - (djm) Bug #117: Don't lie to PAM about username
