--- a/ChangeLog
+++ b/ChangeLog
@@ -14,6 +14,7 @@
      [readconf.c readconf.h ssh_config ssh_config.5 sshconnect.c]
      add a ConnectTimeout option to ssh, based on patch from
      Jean-Charles Longuet (jclonguet at free.fr); portable #207 ok markus@
+ - (djm) Add warning for UsePAM when built without PAM support
 
 20030515
  - (djm) OpenBSD CVS Sync
