--- a/ChangeLog
+++ b/ChangeLog
@@ -15,6 +15,7 @@
      add a ConnectTimeout option to ssh, based on patch from
      Jean-Charles Longuet (jclonguet at free.fr); portable #207 ok markus@
  - (djm) Add warning for UsePAM when built without PAM support
+ - (djm) A few type mismatch fixes from Bug #565
 
 20030515
  - (djm) OpenBSD CVS Sync
