--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@
      Jean-Charles Longuet (jclonguet at free.fr); portable #207 ok markus@
  - (djm) Add warning for UsePAM when built without PAM support
  - (djm) A few type mismatch fixes from Bug #565
+ - (djm) Guard free_pam_environment against NULL argument. Works around
+   HP/UX PAM problems debugged by dtucker
 
 20030515
  - (djm) OpenBSD CVS Sync
