--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20030517
+ - (bal) strcat -> strlcat on openbsd-compat/realpath.c (rev 1.8 OpenBSD)
+
 20030516
  - (djm) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2003/05/15 13:52:10
