--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 20030517
+ - (djm) Return of the dreaded PAM_TTY_KLUDGE, which went missing in 
+   recent merge
+
+20030517
  - (bal) strcat -> strlcat on openbsd-compat/realpath.c (rev 1.8 OpenBSD)
 
 20030516
