--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
      [readconf.c ssh_config ssh_config.5 ssh-keysign.c]
      add AddressFamily option to ssh_config (like -4, -6 on commandline).
      Portable bug #534; ok markus@
+ - (djm) Remove IPv4 by default hack now that we can specify AF in config
 
 20030517
  - (bal) strcat -> strlcat on openbsd-compat/realpath.c (rev 1.8 OpenBSD)
