- (djm) Sync openbsd-compat/ with OpenBSD CVS head

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,7 @@
      ok djm@
  - (djm) Remove IPv4 by default hack now that we can specify AF in config
  - (djm) Tidy and trim TODO
+ - (djm) Sync openbsd-compat/ with OpenBSD CVS head
 
 20030517
  - (bal) strcat -> strlcat on openbsd-compat/realpath.c (rev 1.8 OpenBSD)
