- (djm) KNF on md5crypt.c

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
  - (djm) Tidy and trim TODO
  - (djm) Sync openbsd-compat/ with OpenBSD CVS head
  - (djm) Big KNF on openbsd-compat/
+ - (djm) KNF on md5crypt.c
 
 20030517
  - (bal) strcat -> strlcat on openbsd-compat/realpath.c (rev 1.8 OpenBSD)
