- (djm) Use VIS_SAFE on logged strings rather than default strnvis    encoding (which encodes many more characters)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030523
+ - (djm) Use VIS_SAFE on logged strings rather than default strnvis 
+   encoding (which encodes many more characters)
+
 20030520
  - (djm) OpenBSD CVS Sync
    - deraadt@cvs.openbsd.org 2003/05/18 23:22:01
