--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20030526
+ - (djm) Avoid auth2-chall.c warning when compiling without 
+   PAM, BSD_AUTH and SKEY
+
 20030525
 - (djm) OpenBSD CVS Sync
    - djm@cvs.openbsd.org 2003/05/24 09:02:22
