- (dtucker) Define SSHD_ACQUIRES_CTTY for NCR MP-RAS and Reliant Unix.
I'm pretty sure these are required.  I also want to add -D_XOPEN_SOURCE=1
-D_XOPEN_SOURCE_EXTENDED=1 to CPPFLAGS for MP-RAS but I haven't had confirmation
that it will not break anything else.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 20030530
  - (dtucker) Add missing semicolon in md5crypt.c, patch from openssh at
    roumenpetrov.info
+ - (dtucker) Define SSHD_ACQUIRES_CTTY for NCR MP-RAS and Reliant Unix.
 
 20030526
  - (djm) Avoid auth2-chall.c warning when compiling without 
