--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+20030602
+ - (djm) Fix segv from bad reordering in auth-pam.c
+
 20030530
  - (dtucker) Add missing semicolon in md5crypt.c, patch from openssh at
    roumenpetrov.info
