--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 20030602
  - (djm) Fix segv from bad reordering in auth-pam.c
+ - (djm) Always use saved_argv in sshd.c as compat_init_setproctitle may 
+   clobber
 
 20030530
  - (dtucker) Add missing semicolon in md5crypt.c, patch from openssh at
