--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
    clobber
  - (tim) openbsd-compat/xmmap.[ch] License clarifications. Add missing
    CVS ID.
+ - (djm) Remove "noip6" option from RedHat spec file. This may now be 
+   set at runtime using AddressFamily option.
 
 20030530
  - (dtucker) Add missing semicolon in md5crypt.c, patch from openssh at
