--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
  - (djm) Remove "noip6" option from RedHat spec file. This may now be 
    set at runtime using AddressFamily option.
  - (djm) Fix use of macro before #define in cipher-aes.c
+ - (djm) Sync license on openbsd-compat/bindresvport.c with OpenBSD CVS
 
 20030530
  - (dtucker) Add missing semicolon in md5crypt.c, patch from openssh at
